# Agent_develope_guide

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  README.md  ai_agent_dev_strategy.md  docker-compose.yml  user_guidance.md
.claude/: settings.json
.claude/agents/: backend-dev.md  design-director.md  frontend-dev.md  (+2 more)
api/: .dockerignore  .env.example  README.md  pyproject.toml  temp_migrate.db
api/alembic/: env.py
api/alembic/versions/: 63989ac54a23_initial_schema.py  b2ce1b32410c_add_performance_indexes.py
api/app/: cli.py  main.py
api/app/api/v1/: analytics.py  auth.py  cost.py  events.py  health.py  human_review.py  mcp.py  workflows.py
api/app/core/: cache.py  circuit_breaker.py  config.py  cost_tracker.py  database.py  dead_letter.py  deps.py  logging.py  mcp_client.py  mcp_interceptors.py  metrics.py  sse_manager.py  tracing.py  websocket_manager.py
api/app/mcp/: __init__.py  server.py
api/app/mcp/backends/: __init__.py  github.py  postgres.py
api/app/middleware/: __init__.py  correlation.py  rate_limit.py  security.py
api/app/models/: __init__.py  audit.py  base.py  human_review.py  user.py  workflow.py
api/app/security/: __init__.py  auth.py  opa_client.py
api/app/services/: cost_governor.py  feedback_analyzer.py  llm_client.py  model_router.py  prompt_compressor.py  semantic_cache.py  vector_store.py
api/app/workflows/: graph.py  human_review.py  nodes.py  runner.py  state.py
api/tests/: conftest.py  factories.py
api/tests/unit/: test_cascade_routing.py  test_circuit_breaker.py  test_config.py  test_cost_governor.py  test_cost_governor_redis.py  test_health.py  test_model_router.py  test_opa_client.py  test_workflow_api.py  test_workflow_nodes.py
frontend/: .dockerignore  index.html  package-lock.json  package.json  tailwind.config.js
scripts/: validate_agent_scopes.py
(+34 files in other folders)
