[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-workflow-platform-api"
version = "0.1.0"
description = "Wave 1 backend foundation for the AI Workflow Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.34.0,<1.0.0",
  "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "alembic>=1.13.0,<2.0.0",
  "redis>=5.0.0,<6.0.0",
  "pydantic>=2.7.0,<3.0.0",
  "pydantic-settings>=2.2.0,<3.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "httpx>=0.28.0,<1.0.0",
  "python-json-logger>=2.0.7,<3.0.0",
  "structlog>=24.1.0,<25.0.0",
  "prometheus-fastapi-instrumentator>=7.0.0,<9.0.0",
  "opentelemetry-api>=1.25.0,<2.0.0",
  "opentelemetry-sdk>=1.25.0,<2.0.0",
  "opentelemetry-instrumentation-fastapi>=0.46b0,<1.0.0",
  "python-jose[cryptography]>=3.3.0,<4.0.0",
  "passlib[bcrypt]>=1.7.4,<2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "pytest-asyncio>=0.23.0,<1.0.0",
  "ruff>=0.5.0,<1.0.0",
  "mypy>=1.10.0,<2.0.0",
  "aiosqlite>=0.20.0,<1.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring external services",
    "slow: Slow running tests",
]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "*/__pycache__/*", "app/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
